[package]
name = "dynamo_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
rusoto_core = "0.44.0"
dynomite = "0.9"
uuid = { version = "0.8", features = ["serde", "v4"] }
